# 0.00.44 (71398) Dec 21, 2012
12/21/12 demonstrate "Place the Points" challenges for Game
12/21/12 simplify implementation of P3P challenges to 3 classes
12/21/12 add LineForm enum to game model
12/21/12 fix fractional y-intercepts in P3P challenges
12/21/12 a bit more refactoring of P3P view, to eliminate some duplicate code
12/21/12 refactor P3P challenges, move functionality to base classes, add support for slope-intercept
12/21/12 remove assertion from SlopeInterceptLineNode that disallows fractional y-intercept
12/21/12 prevent points from overlapping in "Place 3 Points" challenges
12/21/12 first pass at "Place 3 Points" for point-slope form (mostly working, a few warts)
12/21/12 remove ':' from sim title
12/21/12 add game levels 5 & 6, for testing "Place Points" challenges
12/21/12 make "correct answer" a slightly darker shade of green (from rgb=0,200,0 to 0,180,0)
12/20/12 move computations and tests related to fractional y-intercept into Fraction class
12/18/12 consolidate calls to Line.getYIntercept
# 0.00.43 (71362) Dec 18, 2012
12/18/12 demo fractional y-intercept in test application
12/18/12 fix Line.getYIntercept to handle case where numerator or denominator is zero
12/18/12 factor out duplicated code in for fractional y-intercept in slope-intercept equations
12/18/12 add fractional y-intercept to slope-intercept equations (some duplicated code)
12/18/12 TestEquationNodes: add test case for fractional y-intercept
12/18/12 TestEquationNodes: delete some redundant test cases to make room for testing fractional y-intercept
12/17/12 move algorithm for fractional y-intercept into model
12/17/12 test program for converting y-intercept from decimal to improper fraction
12/17/12 MTE challenges: show the user's guess line (black) when the user's guess is correct
12/17/12 GTL challenges: show the answer line (green) when user's guess is correct
12/17/12 keep the color of "your line" consistently black