@@ -1,0 +1,16 @@
+// Copyright 2002-2012, University of Colorado
+package edu.colorado.phet.linegraphing.linegame.model;
+
+/**
+ * Modes of manipulation that are provided by Game challenges.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public enum ManipulationMode {
+    SLOPE,
+    INTERCEPT,
+    SLOPE_INTERCEPT,
+    POINT,
+    POINT_SLOPE,
+    POINTS
+}
